# libKriging

./: .RData  .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  .tsan-suppressions  .valgrind-suppressions  AGENTS.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTES.md  CONTRIBUTING.md  GitHubFlow.md  NOTICE  README.md  Rhistory  X_sim.csv  `km1Nugget.init` <-.r  `km` <-.r  `logLikFun` <-.r  `logLikGrad` <-.r  autobuild.sh  build.sh  dump.json  kmStruct.R  maxEI.r  mybuild.sh  refactor_table.md  setup.py  sims1_noise_update_simulate.csv  sims1_nugget_update_simulate.csv  sims1_update_simulate.csv  sims2_full_model.csv  sims2_noise_full_model.csv  sims2_nugget_full_model.csv  test_data2_with_save_reload.json  tocontinue.md  venv  (+2 more)
bench/: CMakeLists.txt  README.md  README_compute_dX_optimization.md  README_cov_benchmark.md  README_dX_benchmark.md  SAMPLE_REPORT.md  bench-adambfgs.cpp  bench-fit-profile.cpp  bench-kriging.cpp  bench-linearalgebra.cpp  bench-mlpkriging.cpp  bench-nestedkriging.cpp  bench-noisekriging.cpp  bench-nuggetkriging.cpp  bench-vecchia.cpp  bench-warpkriging.cpp  bench.sh  bench_compute_dX  bench_compute_dX.cpp  bench_cov_computation  bench_cov_computation.cpp  bench_dX_computation  bench_dX_computation.cpp  bench_kriging_multistart.cpp  bench_kriging_multistart.sh  bench_multistart_optim.sh  bench_noisekriging_multistart.cpp  bench_noisekriging_multistart.sh  bench_nuggetkriging_multistart.cpp  bench_nuggetkriging_multistart.sh  optim-report.md  test-report-generation.sh  thread_pool_size.sh
bench/comparison/: README.md  aggregate.py  functions.py  make_datasets.py  run_python.py  run_r.R
bindings/Octave/: CMakeLists.txt  Kriging.m  Kriging_binding.cpp  Kriging_binding.hpp  LinearRegression.m  LinearRegression_binding.cpp  LinearRegression_binding.hpp  NoiseKriging.m  NoiseKriging_binding.cpp  NoiseKriging_binding.hpp  NuggetKriging.m  NuggetKriging_binding.cpp  NuggetKriging_binding.hpp  OctaveMode.cmake  Optim_binding.hpp  Params.cpp  Params.hpp  Params.m  Params_binding.cpp  README.md  common_binding.cpp  common_binding.hpp  demoStruct.cpp  kriging_branin2d_octave.ipynb  kriging_vecchia_branin2d_octave.ipynb  mLibKriging.cpp  mex_soversion.c  mlpkriging_branin2d_octave.ipynb  mypow2.cpp  nestedkriging_branin2d_octave.ipynb  noisekriging_branin2d_octave.ipynb  nuggetkriging_branin2d_octave.ipynb  value_class.m  warpkriging_affine_branin2d_octave.ipynb  warpkriging_boxcox_branin2d_octave.ipynb  warpkriging_categorical_branin2d_octave.ipynb  warpkriging_knots_branin2d_octave.ipynb  warpkriging_kumaraswamy_branin2d_octave.ipynb  warpkriging_mlp_branin2d_octave.ipynb  warpkriging_mlp_joint_branin2d_octave.ipynb  (+3 more)
bindings/Python/: CMakeLists.txt  README.md  check_requirements.py  check_requirements_12.py  dev-requirements.txt  kriging_branin2d_py.ipynb  kriging_vecchia_branin2d_py.ipynb  mlpkriging_branin2d_py.ipynb  nestedkriging_branin2d_py.ipynb  noisekriging_branin2d_py.ipynb  nuggetkriging_branin2d_py.ipynb  pyproject.toml  requirements.txt  setup.py  warpkriging_affine_branin2d_py.ipynb  warpkriging_boxcox_branin2d_py.ipynb  warpkriging_categorical_branin2d_py.ipynb  warpkriging_knots_branin2d_py.ipynb  warpkriging_kumaraswamy_branin2d_py.ipynb  warpkriging_mlp_branin2d_py.ipynb  warpkriging_mlp_joint_branin2d_py.ipynb  warpkriging_neural_mono_branin2d_py.ipynb  warpkriging_none_branin2d_py.ipynb  warpkriging_ordinal_branin2d_py.ipynb
src/lib/: ArmadilloTestClass.cpp  Bench.cpp  CMakeLists.txt  CacheFunction.cpp  Covariance.cpp  DemoArmadilloClass.cpp  DemoClass.cpp  DemoFunction.cpp  Kriging.cpp  KrigingImpl.cpp  KrigingLoader.cpp  LinearAlgebra.cpp  LinearRegression.cpp  LinearRegressionOptim.cpp  MLPKriging.cpp  NestedKriging.cpp  NeuralKernelKriging.cpp  NoiseKriging.cpp  NuggetKriging.cpp  Optim.cpp  OrdinaryKriging.cpp  Random.cpp  TestClass.cpp  TestFunction.cpp  Trend.cpp  WarpKriging.cpp  lkalloc.cpp  version.cpp.in
src/tests/: CMakeLists.txt  armadillo_example.cpp  class_unit_test.cpp  function_unit_test.cpp  main.cpp
tests/: CMakeLists.txt  CacheFunctionTest.cpp  GetVersion  GetVersion.cpp  JsonTest.cpp  KSTestValidation.cpp  KrigingFitTest.cpp  KrigingLeaveOneOutTest.cpp  KrigingLogLikTest.cpp  KrigingPredictTest.cpp  KrigingSimulateTest.cpp  KrigingTest.cpp  KrigingUpdateSimulateTest.cpp  KrigingUpdateTest.cpp  KrigingVecchiaTest.cpp  KrigingWarmRestartTest.cpp  LinearAlgebraTest.cpp  MLPKrigingTest.cpp  MLPKrigingUpdateSimulateTest.cpp  NestedKrigingTest.cpp  NoiseKrigingFitTest.cpp  NoiseKrigingLogLikTest.cpp  NoiseKrigingPredictTest.cpp  NoiseKrigingSimulateTest.cpp  NoiseKrigingTest.cpp  NoiseKrigingUpdateSimulateTest.cpp  NoiseKrigingUpdateTest.cpp  NuggetKrigingFitTest.cpp  NuggetKrigingLogLikTest.cpp  NuggetKrigingPredictTest.cpp  NuggetKrigingSimulateTest.cpp  NuggetKrigingTest.cpp  NuggetKrigingUpdateSimulateTest.cpp  NuggetKrigingUpdateTest.cpp  OrdinaryKrigingTest.cpp  README.md  WarpKrigingPerWarpTest.cpp  WarpKrigingTest.cpp  WarpKrigingUpdateSimulateTest.cpp  armadillo_example  (+15 more)
tests/demo/: JsonTest.cpp  armadillo_example.cpp  class_unit_test.cpp  function_unit_test.cpp
tests/references/: data1-scal-X.csv  data1-scal-result-leaveOneOut.csv  data1-scal-result-leaveOneOutGrad.csv  data1-scal-result-logLikelihood.csv  data1-scal-result-logLikelihoodGrad.csv  data1-scal-y.csv  data2-grad-1-X.csv  data2-grad-1-result-logLikelihood.csv  data2-grad-1-result-logLikelihoodGrad.csv  data2-grad-1-y.csv  data2-grad-10-X.csv  data2-grad-10-result-logLikelihood.csv  data2-grad-10-result-logLikelihoodGrad.csv  data2-grad-10-y.csv  data2-grad-2-X.csv  data2-grad-2-result-logLikelihood.csv  data2-grad-2-result-logLikelihoodGrad.csv  data2-grad-2-y.csv  data2-grad-3-X.csv  data2-grad-3-result-logLikelihood.csv  data2-grad-3-result-logLikelihoodGrad.csv  data2-grad-3-y.csv  data2-grad-4-X.csv  data2-grad-4-result-logLikelihood.csv  data2-grad-4-result-logLikelihoodGrad.csv  data2-grad-4-y.csv  data2-grad-5-X.csv  data2-grad-5-result-logLikelihood.csv  data2-grad-5-result-logLikelihoodGrad.csv  data2-grad-5-y.csv  (+16 more)
(+872 files in other folders)
